--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pluggy==1.6.0
 psycopg2-binary==2.9.10
 psycopg[binary]
 pycodestyle==2.14.0
+pybreaker
 pydantic==2.11.7
 pydantic_core==2.33.2
 pyflakes==3.4.0
