--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Lint
-        run: ruff check .
+        run: ruff check app
 
       - name: Run tests with coverage
         env:
